--- a/public/results.html
+++ b/public/results.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results - Drive Mzansi</title>
   <!-- Path to the CSS file -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
   <!-- Header with Navigation -->
