--- a/public/profile.html
+++ b/public/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/styles.css"> <!-- Link to your main stylesheet -->
+  <link rel="stylesheet" href="public/css/style.css"> <!-- Link to your main stylesheet -->
   <style>
     /* Centering and layout styles */
     body {
