--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-Up - Drive Mzansi</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Path to your main CSS file -->
+    <link rel="stylesheet" href="public/css/style.css"> <!-- Path to your main CSS file -->
     <style>
         /* Inline styles for consistency with index page */
         body {
