reduce width of login form

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drive Mzansi</title>
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -72,7 +72,7 @@
         }
     </style>
 </head>
-<body>
+<body class="index-page"> <!-- Added class here for specific targeting -->
     <header>
         <nav>
             <ul>
@@ -82,7 +82,7 @@
                 <li><a href="profile.html">Profile</a></li>
             </ul>
         </nav>
-        <img src="images/logo.png" alt="Drive Mzansi Logo">
+        <img src="images/logo.png" alt="Drive Mzansi Logo" class="logo" id="index-logo">
         <div class="slogan">
             <p>Master the K53 with Drive Mzansi - Your Journey to Passing the Test Starts Here!</p>
         </div>
