--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Drive Mzansi</title>
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,7 +41,7 @@
         }
         main {
             padding: 20px;
-            max-width: 500px;
+            max-width: 400px; /* Reduced width */
             margin: 0 auto;
             background-color: white;
             border-radius: 8px;
@@ -58,20 +58,20 @@
         }
         input {
             width: 100%;
-            padding: 10px;
-            margin: 10px 0 20px 0;
+            padding: 8px;  /* Reduced padding */
+            margin: 8px 0 16px 0;  /* Reduced margin */
             border: 1px solid #ccc;
             border-radius: 4px;
-            font-size: 16px;
+            font-size: 14px; /* Smaller font size */
         }
         button {
-            padding: 10px 20px;
+            padding: 8px 16px;  /* Reduced padding */
             background-color: #333;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 14px; /* Smaller font size */
         }
         button:hover {
             background-color: #555;
@@ -82,7 +82,7 @@
             margin-top: 20px;
         }
         p {
-            font-size: 16px;
+            font-size: 14px; /* Smaller font size */
         }
     </style>
 </head>
@@ -94,7 +94,7 @@
                 <li><a href="sign-up.html">Sign Up</a></li>
             </ul>
         </nav>
-        <img src="images/logo.png" alt="Drive Mzansi Logo" width="300" height="300">
+        <img src="images/logo.png" alt="Drive Mzansi Logo" width="200" height="200"> <!-- Adjusted logo size -->
     </header>
     
     <main>
