--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Control Question 3 - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <style>
     /* Page styling for consistency */
     body {
