--- a/public/home.html
+++ b/public/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/style.css"> <!-- Updated path for CSS to match the actual file name -->
+  <link rel="stylesheet" href="css/style.css"> <!-- Updated path for CSS to match the actual file name -->
   <style>
       body {
           font-family: Arial, sans-serif;
