--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -183,7 +183,7 @@
     }
 
     // Form submission event to save answer, calculate score, and navigate to the next question
-    document.getElementById('control-q3').addEventListener('submit', function(e) {
+    document.getElementById('control-question3').addEventListener('submit', function(e) {
       e.preventDefault();
       clearInterval(timerInterval); // Stop timer on form submission
       
