--- a/public/signs_question3.html
+++ b/public/signs_question3.html
@@ -185,7 +185,7 @@
       const selectedAnswer = document.querySelector('input[name="sign-question3"]:checked').value;
 
       // Save the answer under the key 'signs_q3' for this specific question
-      userAnswers['signs_q3'] = selectedAnswer;
+      userAnswers['sign-question33'] = selectedAnswer;
       safeLocalStorageSetItem('userAnswers', JSON.stringify(userAnswers));
 
       // Redirect to results page
