--- a/public/rules_question3.html
+++ b/public/rules_question3.html
@@ -90,6 +90,7 @@
   </style>
 </head>
 <body>
+  <!-- Header with navigation and timer display -->
   <header>
     <nav>
       <ul>
@@ -99,21 +100,25 @@
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
 
+  <!-- Main content section -->
   <main>
     <h1>Road Rules</h1>
     <h2>Question 3 of 3</h2>
 
+    <!-- Question image and text container -->
     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
       <img src="images/rules.jpg" alt="Rules Image" style="width: 250px; height: auto; margin: 10px 0;">
       <p>A driver's license must always be kept:</p>
     </div>
 
+    <!-- Form for answer selection and navigation buttons -->
     <form id="rule-question3" style="text-align: center;">
       <input type="radio" name="rule-question3" value="A-Inside the vehicle" required> A-Inside the vehicle <br>
       <input type="radio" name="rule-question3" value="B-With the driver"> B-With the driver <br>
       <input type="radio" name="rule-question3" value="C-All of the above"> C-All of the above <br>
       <input type="radio" name="rule-question3" value="D-None of the above"> D-None of the above <br>
 
+      <!-- Button container with back and next buttons -->
       <div class="button-container">
         <a href="rules_question2.html" class="button back-button">Back</a>
         <button type="submit" class="button">Next</button>
@@ -121,15 +126,19 @@
     </form>
   </main>
 
+  <!-- Footer with copyright text -->
   <footer>
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <div id="root"></div>
+  <!-- Add the React root element -->
+  <div id="root"></div>  <!-- React will render components here -->
 
-  <script src="js/rules_question3.js"></script>
+  <!-- Include the JavaScript file -->
+  <script src="js/rules_question3.js"></script>  <!-- This is the newly added script link -->
 
   <script>
+    // Safe localStorage functions for improved reliability
     function safeLocalStorageSetItem(key, value) {
       try {
         localStorage.setItem(key, value);
@@ -147,6 +156,7 @@
       }
     }
 
+    // Countdown Timer with Persistent Storage
     let timeLeft = parseInt(safeLocalStorageGetItem('quizTimeLeft')) || 600;
     const timerDisplay = document.getElementById('timer');
 
@@ -158,27 +168,41 @@
       if (timeLeft <= 0) {
         clearInterval(timerInterval);
         alert("Time's up!");
-        window.location.href = "results.html";
+        window.location.href = "results.html"; // Go to results page when time is up
       } else {
         timeLeft--;
         safeLocalStorageSetItem('quizTimeLeft', timeLeft);
       }
     }
 
+    // Start the countdown and update every second
     const timerInterval = setInterval(updateTimer, 1000);
 
-    document.getElementById('rule-question3').addEventListener('submit', function(e) {
+    // Form submission event to save answer and navigate to the next question
+    document.getElementById('rule-question3').addEventListener('submit', function(e) {  // Update form ID
       e.preventDefault();
-      clearInterval(timerInterval);
-
+      clearInterval(timerInterval); // Stop timer on form submission
+      
+      // Retrieve or initialize the answers object
       const userAnswers = JSON.parse(safeLocalStorageGetItem('userAnswers')) || {};
-      const selectedAnswer = document.querySelector('input[name="rule-question3"]:checked').value;
 
-      userAnswers['rules-question3'] = selectedAnswer;
+      // Get the selected answer
+      const selectedAnswer = document.querySelector('input[name="rule-question3"]:checked').value;  // Update question selector
+
+      // Save the answer under the key 'rules_q1' for this specific question
+      userAnswers['rule-question3'] = selectedAnswer;
       safeLocalStorageSetItem('userAnswers', JSON.stringify(userAnswers));
+
+      // Save remaining time
       safeLocalStorageSetItem('quizTimeLeft', timeLeft);
 
-      window.location.href = 'signs_question1.html';
+      // Check if this is the last question and navigate appropriately
+      const isLastQuestion = false; // Set to true if this is the last question
+      if (isLastQuestion) {
+        window.location.href = 'results.html';
+      } else {
+        window.location.href = 'signs_question1.html'; // Update to the next question page
+      }
     });
   </script>
 </body>
