firebase script added

--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,9 @@
         <p>&copy; 2024 Drive Mzansi</p>
     </footer>
 
+    <!-- Firebase Firestore script -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const startTestBtn = document.getElementById('startTestBtn');
