--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,9 @@
 
             // Optional: You can also add a click event to redirect to the login page if not logged in
             startTestBtn.addEventListener('click', function () {
-                if (!userName) {
+                if (userName) {
+                    window.location.href = 'quiz.html'; // Redirect to quiz page after login
+                } else {
                     window.location.href = 'login.html'; // Redirect to login page if not logged in
                 }
             });
@@ -125,3 +127,4 @@
     </script>
 </body>
 </html>
+
